feat: create header component

--- a/src/app/shared/styles/colors.scss
+++ b/src/app/shared/styles/colors.scss
@@ -1,16 +1,4 @@
 $white: #ffffff;
 $black: #000000;
 
-$screaminGreen: #80f972;
-$apple: #49bb4d;
-$doubleSpanishWhite: #e9e2c0;
-$cottonCandy: #ffbcef;
-$whiteLilac: #f3f3fb;
-$alto: #dddddd;
-$regentGray: #86929b;
-$gray: #939393;
-$scorpion: #5c5858;
-$mineShaft: #333333;
-$eden: #135156;
-$blueDianne: #1b4a4e;
-$radicalRed: #ff185a;
+$firefly: #091827;
