--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <ng-container>
-  
+  <app-header></app-header>
 </ng-container>
-<ng-container *ngIf="loading">
+  <ng-container *ngIf="!loading">
   <app-loader></app-loader>
 </ng-container>
