feat: add responsive styles

--- a/src/app/stock-exchanges/stock-exchanges.component.html
+++ b/src/app/stock-exchanges/stock-exchanges.component.html
@@ -3,7 +3,7 @@
     <h2>Explore o mercado</h2>
     <div></div>
   </div>
-  <div class="stock-exchanges--body">
-    <!-- <app-exchange-card *ngFor=""></app-exchange-card> -->
+  <div class="stock-exchanges--body row">
+    <app-exchange-card></app-exchange-card>
   </div>
 </div>
