--- a/src/app/stock-exchanges/stock-exchanges.component.scss
+++ b/src/app/stock-exchanges/stock-exchanges.component.scss
@@ -2,12 +2,30 @@
 
 .stock-exchanges {
   padding-top: 120px;
+  
+  .stock-exchanges--header {
+    margin-bottom: 60px;
 
-  h2 {
-    color: $firefly;
-    font-size: 42px;
-    font-style: normal;
-    line-height: normal;
-    font-weight: 700;
+    h2 {
+      color: $firefly;
+      font-size: 42px;
+      font-style: normal;
+      line-height: normal;
+      font-weight: 700;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .stock-exchanges {
+    padding-top: 110px;
+
+    .stock-exchanges--header {
+      margin-bottom: 42px;
+  
+      h2 {
+        font-size: 24px;
+      }
+    }
   }
 }
