chore: finish layout

--- a/src/app/shared/styles/colors.scss
+++ b/src/app/shared/styles/colors.scss
@@ -2,6 +2,8 @@ $white: #ffffff;
 $black: #000000;
 
 $firefly: #091827;
+$porcelain: #ecedee;
 $cornflower: #d1d5d7;
 $osloGray: #7e868e;
 $malachite: #00c853;
+$cerulean: #00add2;
