--- a/src/app/stock-exchanges/stock-exchanges.component.html
+++ b/src/app/stock-exchanges/stock-exchanges.component.html
@@ -1,7 +1,13 @@
 <div class="container stock-exchanges">
   <div class="stock-exchanges--header">
     <h2>Explore o mercado</h2>
-    <div></div>
+    <div class="stock-exchanges--header__filter">
+      <span>Ordenar:</span>
+      <div class="filter-options">
+        <button>Em Alta</button>
+        <button class="inactive">Em Baixa</button>
+      </div>
+    </div>
   </div>
   <div class="stock-exchanges--body row">
     <app-exchange-card></app-exchange-card>
