--- a/src/app/stock-exchanges/stock-exchanges.component.scss
+++ b/src/app/stock-exchanges/stock-exchanges.component.scss
@@ -5,6 +5,10 @@
   
   .stock-exchanges--header {
     margin-bottom: 60px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 
     h2 {
       color: $firefly;
@@ -12,6 +16,37 @@
       font-style: normal;
       line-height: normal;
       font-weight: 700;
+    }
+
+    .stock-exchanges--header__filter {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+      span {
+        color: $osloGray;
+        font-size: 14px;
+        font-weight: 400;
+        margin-right: 16px;
+      }
+
+      button {
+        border: none;
+        width: 122px;
+        height: 35px;
+        border-radius: 100px;
+        background: $cerulean;
+        color: $white;
+
+        &:first-child {
+          margin-right: 8px;
+        }
+
+        &.inactive {
+          background-color: $porcelain;
+          color: $osloGray;
+        }
+      }
     }
   }
 }
@@ -22,9 +57,21 @@
 
     .stock-exchanges--header {
       margin-bottom: 42px;
+      flex-direction: column;
+      align-items: start;
   
       h2 {
         font-size: 24px;
+        margin-bottom: 42px;
+      }
+
+      .stock-exchanges--header__filter {
+        flex-direction: column;
+        align-items: start;
+
+        span {
+          margin-bottom: 16px;
+        }
       }
     }
   }
