--- a/src/app/stock-exchanges/exchange-card/exchange-card.component.scss
+++ b/src/app/stock-exchanges/exchange-card/exchange-card.component.scss
@@ -5,7 +5,8 @@
   flex-shrink: 0;
   border: 1px solid $cornflower;
   background: $white;
-  padding: 42px 40px 0px 42px;
+  padding: 32px 40px 0px 32px;
+  position: relative;
 
   .exchange-card--info {
     .exchange-card--info__header {
@@ -43,9 +44,15 @@
           font-size: 12px;
           position: absolute;
           left: 98px;
-          bottom: 10px;
+          bottom: 8px;
         }
       }
     }
+  }
+
+  .exchange-card--chart {
+    position: absolute;
+    left: -23px;
+    bottom: -30px;
   }
 }
