--- a/src/app/stock-exchanges/exchange-card/exchange-card.component.html
+++ b/src/app/stock-exchanges/exchange-card/exchange-card.component.html
@@ -1,13 +1,13 @@
-<div class="exchange-card col-md-3 col-sm-12">
-  <img src="../../../assets/images/logo.svg" alt="">
+  <div *ngFor="let exchange of stockExchanges" class="exchange-card col-md-3 col-sm-12 mb-4">
+  <img src="../../../assets/images/ativo-logo.png" alt="">
   <div class="exchange-card--info">
     <div class="exchange-card--info__header">
       <span>AES Eletropaulo</span>
-      <span>ELPL4</span>
+      <span>{{exchange?.name}}</span>
     </div>
     <div class="exchange-card--info__body">
       <p>Preço do ativo</p>
-      <span>R$ 36,32
+      <span>{{'R$ ' + exchange?.price}}
         <i class="fa fa-solid fa-arrow-up"></i>
       </span>
     </div>
