--- a/src/app/stock-exchanges/exchange-card/exchange-card.component.scss
+++ b/src/app/stock-exchanges/exchange-card/exchange-card.component.scss
@@ -2,10 +2,11 @@
 
 .exchange-card {
   height: 290px;
-  flex-shrink: 0;
+  max-width: 256px;
   border: 1px solid $cornflower;
   background: $white;
   padding: 32px 40px 0px 32px;
+  margin-right: 18px;
   position: relative;
 
   .exchange-card--info {
@@ -54,5 +55,11 @@
     position: absolute;
     left: -23px;
     bottom: -30px;
+  }
+}
+
+@media (max-width: 768px) {
+  .exchange-card {
+    max-width: unset;
   }
 }
