--- a/src/app/stock-exchanges/stock-exchanges.component.html
+++ b/src/app/stock-exchanges/stock-exchanges.component.html
@@ -9,7 +9,7 @@
       </div>
     </div>
   </div>
-  <div class="stock-exchanges--body row">
-    <app-exchange-card></app-exchange-card>
+  <div class="stock-exchanges--body">
+    <app-exchange-card class="row" [stockExchanges]="stockExchanges"></app-exchange-card>
   </div>
 </div>
