--- a/src/app/stock-exchanges/exchange-card/exchange-card.component.html
+++ b/src/app/stock-exchanges/exchange-card/exchange-card.component.html
@@ -1,4 +1,4 @@
-  <div *ngFor="let exchange of stockExchanges" class="exchange-card col-md-3 col-sm-12 mb-4">
+  <div *ngFor="let exchange of orderBy()" class="exchange-card col-md-3 col-sm-12 mb-4">
   <img src="../../../assets/images/ativo-logo.png" alt="">
   <div class="exchange-card--info">
     <div class="exchange-card--info__header">
@@ -7,10 +7,9 @@
     </div>
     <div class="exchange-card--info__body">
       <p>Preço do ativo</p>
-      <span>{{'R$ ' + exchange?.price}}
-        <i class="fa fa-solid fa-arrow-up"></i>
-      </span>
+      <span class="price" [ngClass]="{'low': exchange?.price < 2}">{{'R$ ' + exchange?.price}}</span>
     </div>
   </div>
-  <div class="exchange-card--chart" id="chart"></div>
+  <img class="exchange-card--chart-border" src="../../../assets/images/chart-border.svg" alt="">
+  <img class="exchange-card--chart" src="../../../assets/images/chart.svg" alt="">
 </div>
