--- a/src/app/stock-exchanges/stock-exchanges.component.scss
+++ b/src/app/stock-exchanges/stock-exchanges.component.scss
@@ -49,6 +49,26 @@
       }
     }
   }
+
+  .stock-exchanges--body {
+    margin-bottom: 24px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .stock-exchanges {
+    .stock-exchanges--header {
+      margin-bottom: 30px;
+      
+      h2 {
+        font-size: 32px;
+      }
+    }
+
+    .stock-exchanges--body {
+      padding: 0px 28px;
+    }
+  }
 }
 
 @media (max-width: 768px) {
@@ -73,6 +93,10 @@
           margin-bottom: 16px;
         }
       }
+    }
+
+    .stock-exchanges--body {
+      padding: 0px;
     }
   }
 }
