--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,5 +3,5 @@
 </ng-container>
 <ng-container>
   <app-header></app-header>
-  <app-stock-exchanges></app-stock-exchanges>
+  <app-stock-exchanges (finishLoading)="getLoading()"></app-stock-exchanges>
 </ng-container>
